<resources>
    <string name="app_name" translatable="false">Hobby Matcher</string>
    <string name="home_button">Home</string>
    <string name="add_activity_button">Add Activity</string>
    <string name="profile_button">My Profile</string>
    <string name="add_activity_name">What do you plan to do?</string>
    <string name="add_activity_name_placeholder">Activity title</string>
    <string name="add_activity_description">Describe your activity</string>
    <string name="add_activity_description_placeholder">Your description</string>
    <string name="add_activity_type">What is your activity?</string>
    <string name="add_activity_movie">Movie</string>
    <string name="add_activity_tabletop">Tabletop</string>
    <string name="add_activity_walk">Walking</string>
    <string name="add_activity_other">Other</string>
    <string name="add_activity_duration_label">How much will it last?</string>
    <string name="add_activity_start_time_label">When it starts?</string>
    <string name="add_activity_save_button">Create activity</string>
    <string name="add_activity_start_time_placeholder" translatable="false">01/01/2020 19:00</string>
    <string name="add_activity_is_public">This is public activity</string>
    <string name="add_activity_title">Add your activity</string>
    <string name="empty_field">Field cannot be empty</string>
    <string name="add_activity_place_label">Where will it happen?</string>
    <string name="add_activity_place_placeholder">Location</string>
    <string name="incorrect_date">Enter time in the pattern dd/mm/yyyy hh:mm</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="delete">Delete</string>
    <string name="text_no_internet">No internet connection</string>
    <string name="text_cannot_operate_offline">Unfortunately, this app cannot work without internet connection.</string>
    <string name="text_my_activities">My activities</string>
    <string name="desc_delete_icon">Delete icon</string>
    <string name="desc_profile_picture">User profile picture</string>
    <string name="button_log_out">Log Out</string>
    <string name="text_invite">Invite</string>
    <string name="text_to_join">To join</string>
    <string name="button_send_invitation">Send invitation</string>
    <string name="text_participants">Participants</string>
    <string name="button_invite">Invite</string>
    <string name="button_join">Join</string>
    <string name="button_leave">Leave</string>
    <string name="text_private_activity">Private</string>
    <string name="text_public_activity">Public</string>
    <string name="text_all_activities">All activities</string>
    <string name="text_invitations">Invitations</string>
    <string name="err_connot_invite_yourself">You cannot invite yourself</string>
    <string name="msg_invitation_sent">Invitation sent</string>
    <string name="text_created_activities">Created activities</string>
    <string name="text_joined_activities">Joined activities</string>
</resources>