<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AddActivityFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/addActivitySaveButton"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/addActivityTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginVertical="@dimen/form_vertical_margin"
                android:layout_marginHorizontal="@dimen/form_horizontal_margin"
                android:text="@string/add_activity_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/addActivityNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/form_vertical_margin"
                android:text="@string/add_activity_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addActivityTitle"
                android:layout_marginHorizontal="@dimen/form_horizontal_margin" />

            <EditText
                android:id="@+id/addActivityNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/form_vertical_margin"
                android:layout_marginHorizontal="@dimen/form_horizontal_margin"
                android:hint="@string/add_activity_name_placeholder"
                android:ems="10"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addActivityNameLabel" />

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="@dimen/form_vertical_margin"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addActivityNameEditText" />

            <TextView
                android:id="@+id/addActivityDescriptionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/form_vertical_margin"
                android:text="@string/add_activity_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider1"
                android:layout_marginHorizontal="@dimen/form_horizontal_margin" />

            <EditText
                android:id="@+id/addActivityDescriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginVertical="@dimen/form_vertical_margin"
                android:layout_marginHorizontal="@dimen/form_horizontal_margin"
                android:hint="@string/add_activity_description_placeholder"
                android:ems="10"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addActivityDescriptionLabel" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="@dimen/form_vertical_margin"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addActivityDescriptionEditText" />

            <TextView
                android:id="@+id/addActivityTypeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/form_horizontal_margin"
                android:layout_marginVertical="@dimen/form_vertical_margin"
                android:text="@string/add_activity_type"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider2"
                />

            <RadioGroup
                android:id="@+id/addActivityTypeRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/form_horizontal_margin"
                android:layout_marginVertical="@dimen/form_vertical_margin"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addActivityTypeLabel">

                <RadioButton
                    android:id="@+id/addActivityMovieRadioButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/radio_flat_selector"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:layout_marginHorizontal="@dimen/form_radio_button_margin"
                    android:text="@string/add_activity_movie"
                    android:layout_weight="1"
                    android:textColor="@color/radio_text_color_selector"
                    />

                <RadioButton
                    android:id="@+id/addActivityTabletopRadioButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/radio_flat_selector"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:layout_marginHorizontal="@dimen/form_radio_button_margin"
                    android:text="@string/add_activity_tabletop"
                    android:layout_weight="1"
                    android:textColor="@color/radio_text_color_selector"
                    />

                <RadioButton
                    android:id="@+id/addActivityWalkRadioButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/radio_flat_selector"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:layout_marginHorizontal="@dimen/form_radio_button_margin"
                    android:text="@string/add_activity_walk"
                    android:layout_weight="1"
                    android:textColor="@color/radio_text_color_selector"
                    />

                <RadioButton
                    android:id="@+id/addActivityOtherRadioButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/radio_flat_selector"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:layout_marginHorizontal="@dimen/form_radio_button_margin"
                    android:text="@string/add_activity_other"
                    android:layout_weight="1"
                    android:textColor="@color/radio_text_color_selector"
                    />

            </RadioGroup>

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="@dimen/form_vertical_margin"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addActivityTypeRadioGroup" />

            <TextView
                android:id="@+id/addActivityPlaceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/form_horizontal_margin"
                android:layout_marginVertical="@dimen/form_vertical_margin"
                android:text="@string/add_activity_place_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider3"
                />

            <EditText
                android:id="@+id/addActivityPlaceEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/form_vertical_margin"
                android:layout_marginHorizontal="@dimen/form_horizontal_margin"
                android:hint="@string/add_activity_place_placeholder"
                android:ems="10"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addActivityPlaceLabel" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="@dimen/form_vertical_margin"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addActivityPlaceEditText" />

            <TextView
                android:id="@+id/addActivityStartTimeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/form_horizontal_margin"
                android:layout_marginVertical="@dimen/form_vertical_margin"
                android:text="@string/add_activity_start_time_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider"
                />

            <EditText
                android:id="@+id/addActivityStartTimeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/form_vertical_margin"
                android:layout_marginHorizontal="@dimen/form_horizontal_margin"
                android:hint="@string/add_activity_start_time_placeholder"
                android:ems="10"
                android:inputType="datetime"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addActivityStartTimeLabel" />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="@dimen/form_vertical_margin"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addActivityStartTimeEditText" />

            <TextView
                android:id="@+id/addActivityDurationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/form_horizontal_margin"
                android:layout_marginVertical="@dimen/form_vertical_margin"
                android:text="@string/add_activity_duration_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider4"
                />

            <Spinner
                android:id="@+id/addActivityDurationSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/form_horizontal_margin"
                android:layout_marginVertical="@dimen/form_vertical_margin"
                android:entries="@array/activity_durations"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addActivityDurationLabel" />

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="@dimen/form_vertical_margin"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addActivityDurationSpinner" />

            <CheckBox
                android:id="@+id/addActivityPublicCheckBox"
                android:text="@string/add_activity_is_public"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/form_horizontal_margin"
                android:layout_marginVertical="@dimen/form_vertical_margin"
                app:layout_constraintTop_toBottomOf="@id/divider5"
                app:layout_constraintStart_toStartOf="parent"
                />
        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/addActivitySaveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_activity_save_button"
        android:textColor="@color/white"
        android:background="@color/primaryColor"
        android:layout_marginHorizontal="@dimen/form_horizontal_margin"
        android:layout_marginVertical="@dimen/form_vertical_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>