<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:paddingTop="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnBackground"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/startTimeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="2dp"
            app:drawableStartCompat="@drawable/ic_event_24px"
            app:drawableTint="?attr/colorOnBackground" />

        <TextView
            android:id="@+id/durationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="2dp"
            app:drawableStartCompat="@drawable/ic_hourglass_empty_24px"
            app:drawableTint="?attr/colorOnBackground" />


        <TextView
            android:id="@+id/locationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="2dp"
            app:drawableStartCompat="@drawable/ic_location_on_24px"
            app:drawableTint="?attr/colorOnBackground" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/isPublicTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="2dp"
            app:drawableStartCompat="@drawable/ic_group_24px"
            app:drawableTint="?attr/colorOnBackground" />

        <TextView
            android:id="@+id/typeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="2dp"
            app:drawableStartCompat="@drawable/ic_local_activity_24px"
            app:drawableTint="?attr/colorOnBackground" />

        <TextView
            android:id="@+id/ownerUsernameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="2dp"
            app:drawableStartCompat="@drawable/ic_grade_24px"
            app:drawableTint="?attr/colorOnBackground" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_participants"
            android:textColor="?attr/colorOnBackground"
            android:textSize="20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/participantsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/inviteButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_invite"
                app:icon="@drawable/ic_baseline_person_add_24" />

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/joinLeaveButton"
                style="@style/AccentButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_join"
                app:icon="@drawable/ic_add_24px" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>